# DBKur

./: .gitignore  1.py  2.py  3.py  4.py  5.py  README.md  pyproject.toml  requirements.txt
devops/: docker-compose.yml
samples/: generator.py
src/: main.py
src/common/: job.py  logger.py
src/core/: config.py  database.py  pipeline.py
src/db/repositories/: elastic.py  spark.py
src/db/repositories/elastic/: base_repository.py  book.py  reader.py
src/db/repositories/spark/: base_repository.py  book.py  reader.py
src/db/schemas/elastic/: book.py  reader.py
src/db/schemas/spark/: book.py  reader.py
src/elastic/: queries.py  repository.py  schemas.py
src/elastic/jobs/: __init__.py  clean.py  create.py
src/mixins/: base_service.py  model_mixin.py
src/neo4j/jobs/: create.py
src/pgvector/jobs/: __init__.py  create.py  insert.py
src/services/elastic/: base_service.py  book.py  queries.py  reader.py
src/services/rpc/neo4j/: create_graph.py
src/services/rpc/postgres/: create_table.py  insert_values.py
src/services/scripts/neo4j/: create_graph.py  get_readable_writer.py
src/services/scripts/postgres/: create_table.py  get_similar_vectors.py  insert_values.py
src/services/scripts/spark/: get_debtors.py
src/services/spark/: base_service.py  book.py  queries.py  reader.py
src/spark/: repository.py  schemas.py
src/utils/: singleton.py
