[tool.mypy]
strict = true

[project]
name = "dbkur"
version = "0.1.0"
description = ""
authors = [
    {name = "MupLever",email = "8willox8@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "2.10.6"
email-validator = "2.2.0"
pydantic-settings = "2.8.1"
elasticsearch = "7.17.0"
elastic-transport = "7.16.0"
py2neo = "2021.2.4"
pyspark = "3.5.3"
ruff = "^0.11.5"
psycopg2 = "2.9.10"
Faker = "37.0.0"
python-dotenv = "1.0.1"
sentence-transformers = "3.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
